script/kubernetes/istio-gateway/deployment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: synerunify-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: synerunify-virtualservice
  namespace: synerunify
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress/synerunify-gateway
  http:
    - match:
        - uri:
            prefix: /system
      route:
        - destination:
            host: service-system.synerunify.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /logger
      route:
        - destination:
            host: service-logger.synerunify.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /file
      route:
        - destination:
            host: service-file.synerunify.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /erp
      route:
        - destination:
            host: service-erp.synerunify.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /mall
      route:
        - destination:
            host: service-mall.synerunify.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /captcha
      route:
        - destination:
            host: service-captcha.synerunify.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /process
      route:
        - destination:
            host: service-process.synerunify.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /onlinePreview
      route:
        - destination:
            host: fileview.synerunify.svc.cluster.local
            port:
              number: 8012
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-captcha-manage
  namespace: synerunify
spec:
  targetRefs:
    - kind: Service
      name: captcha-service
  action: DENY
  rules:
    - to:
        - operation:
            paths: ["/captcha/manage", "/captcha/manage/*"]
